--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# Batalla Naval - Cliente
+# Batalla Naval - Cliente y Servidor
 # Dependencias necesarias para ejecutar el juego
 
 pygame>=2.5.0
+requests>=2.31.0
